Resuesto el bug que no mostraba el texto en covers cuando no se tienen libros guardados

--- a/src/pages/cover/cover.scss
+++ b/src/pages/cover/cover.scss
@@ -11,5 +11,9 @@ page-cover {
     background-color: rgba(46, 46, 46, 0.5);
   }
 
+  .text-card {
+    color: black;
+  }
+
 
 }
